# norii

./: .gitignore  .mise.toml  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  commitlint.config.js  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.base.json
.claude/commands/: commit.md  pr.md
.claude/docs/: architecture.md  code-quality.md  design-system.md  development-commands.md  document-model.md  editor-strategy.md  error-handling.md  file-lifecycle.md  frontend-architecture.md  implementation-plan.md  platform-strategy.md  preview-strategy.md  project-structure.md  rust-commands.md  security.md  tech-stack.md  testing.md
.claude/docs/design/: design-system.md  window-chrome.md
.claude/docs/design/decisions/: 0000-template.md  0001-surface-role-and-material.md  0002-glass-is-made-by-os.md  0003-opaque-fallback-outside-macos.md  0004-lime-is-the-only-accent.md  0005-accent-is-never-text.md  0006-sage-palette.md  0007-glass-is-opacity-not-color.md  README.md  _template.md  color-palette.md  glass.md  surface.md  typography.md
.claude/rules/: commit-convention.md  non-goals.md  prior-art.md  project-rules.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  panda.config.ts  postcss.config.cjs  steiger.config.ts  svgr.config.cjs  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.e2e.config.ts
apps/desktop/e2e/: 01-smoke.e2e.ts  02-m1-scenarios.e2e.ts  file-lifecycle.e2e.ts  native-drag.swift  smoke.e2e.ts  verify-native.mjs
apps/desktop/scripts/: verify-native.mjs
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: content_hash.rs  dialog_commands.rs  eol.rs  error.rs  fs_commands.rs  lib.rs  mac_geometry.rs  main.rs  scope.rs  standard_window_buttons.rs  text_encoding.rs  titlebar_drag.rs  tree_commands.rs  tree_watch.rs  watch.rs  window_glass.rs
apps/desktop/src/app/: index.css  index.ts
apps/desktop/src/app/layouts/: App.tsx  error-boundary.tsx
apps/desktop/src/app/lib/: apply-boot-flags.ts  close-defense-flush.test.ts  close-defense.test.ts  close-defense.ts  expose-e2e-api.ts  use-close-guard.ts  use-fullscreen-flag.ts  use-global-shortcuts.ts  use-theme.ts  use-window-glass.ts
apps/desktop/src/entities/: README.md
apps/desktop/src/entities/document/: index.ts
apps/desktop/src/entities/document/model/: document-store.test.ts  document-store.ts  text-access.test.ts  text-access.ts  types.ts
apps/desktop/src/entities/theme/: index.ts
apps/desktop/src/entities/theme/model/: theme-store.test.ts  theme-store.ts
apps/desktop/src/entities/workspace/: index.ts
apps/desktop/src/entities/workspace/model/: workspace-store.test.ts  workspace-store.ts
apps/desktop/src/features/: README.md
apps/desktop/src/features/editor-status/: index.ts
apps/desktop/src/features/open-file/: index.ts
apps/desktop/src/features/open-file/model/: open-file.ts  (+1 more)
apps/desktop/src/features/open-folder/: index.ts
apps/desktop/src/features/open-link/: index.ts
apps/desktop/src/features/save-file/: config.ts  index.ts
apps/desktop/src/features/scroll-sync/: index.ts
apps/desktop/src/features/switch-theme/: index.ts
apps/desktop/src/features/switch-view-mode/: index.ts
apps/desktop/src/features/toggle-sidebar/: index.ts
apps/desktop/src/pages/: README.md
apps/desktop/src/pages/editor/: index.ts
apps/desktop/src/shared/: README.md
apps/desktop/src/shared/config/: design-tokens.test.ts  editor-colors.ts  index.ts  resolve-tokens.ts  strings.ts
apps/desktop/src/shared/ipc/: bindings.ts  index.ts  ipc-error.ts  unwrap.test.ts  unwrap.ts
apps/desktop/src/shared/lib/: char-count.test.ts  char-count.ts  color-contrast.test.ts  color-contrast.ts  index.ts  logger.ts  platform.ts
apps/desktop/src/shared/ui/: banner-styles.ts  confirm-dialog.tsx  confirm-store.test.ts  confirm-store.ts  icons.tsx  index.ts  notice-banner.tsx  notice-store.test.ts  notice-store.ts  notify-ipc-error.ts
apps/desktop/src/widgets/: README.md
apps/desktop/src/widgets/editor-pane/: index.ts
apps/desktop/src/widgets/normalization-banner/: index.ts
apps/desktop/src/widgets/preview-pane/: config.test.ts  config.ts  index.ts
apps/desktop/src/widgets/status-bar/: index.ts
apps/desktop/src/widgets/tab-bar/: index.ts
apps/desktop/src/widgets/title-strip/: index.ts
apps/desktop/src/widgets/view-mode-bar/: index.ts
examples/: README.md  각주-예시.md  다이어그램-예시.md  수식-예시.md  프리뷰-기본.md
scripts/: bundle-size.mjs  docs-drift.mjs  free-port.mjs  record-demo.sh  upload-attachment.sh
(+59 files in other folders)
