# Rust 백엔드 — 파일 I/O·감시·다이얼로그 담당(마일스톤 M1부터).
# 버전 핀의 단일 출처 역할: .claude/docs/tech-stack.md 표와 함께 갱신한다.
[package]
name = "norii"
version = "0.1.0"
description = "가볍고 빠른 로컬 우선 마크다운 소스 뷰 에디터"
license = "MIT"
edition = "2021"

[lib]
# 향후 Tauri 2 모바일 타깃 재사용을 위해 라이브러리로 분리한다 (플랫폼 전략).
name = "norii_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# 실앱 E2E 하네스용 — `tauri dev --features webdriver`로 켜면 임베디드 WebDriver(127.0.0.1:4445)가
# 기동한다(→ .claude/docs/testing.md). 피처를 켜야만 아래 optional 크레이트가 컴파일된다.
webdriver = ["dep:tauri-plugin-webdriver"]

[dependencies]
tauri = { version = "2", features = [] }
# optional이라 webdriver 피처를 켤 때만 컴파일·링크된다 — 일반 개발·릴리스 빌드에는 포함되지 않는다.
# (cfg(debug_assertions)는 의존성 선택에 지원되지 않아 릴리스에 새어 들어가므로 피처로 게이팅한다.)
tauri-plugin-webdriver = { version = "0.2.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
# 내용 해시(저장 충돌 검사·에코 억제 기준값 → .claude/docs/file-lifecycle.md#저장-원자성과-충돌-검사)
sha2 = "0.10.9"
# 원자적 쓰기의 임시 파일(같은 디렉터리에 쓰고 rename → file-lifecycle.md#저장-원자성과-충돌-검사)
tempfile = "3.24.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-log = "2.8.0"
# plugin-log의 레벨 필터 타입(log::LevelFilter)에 필요한 표준 로깅 파사드.
log = "0.4"
# IPC 타입 계약 — Rust 커맨드 → TS 바인딩 생성 (→ .claude/docs/testing.md)
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.25"
specta-typescript = "0.0.12"

[dev-dependencies]
serde_json = "1.0.150"
